--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,7 +70,7 @@ android {
 }
 
 dependencies {
-
+    implementation project(path: ':lib_base')
     implementation rootProject.desLibs.coreKtx
     implementation rootProject.desLibs.lifecycleRuntimeKtx
     implementation rootProject.desLibs.activityCompose
@@ -83,7 +83,10 @@ dependencies {
     androidTestImplementation rootProject.desLibs.extJunit
     androidTestImplementation rootProject.desLibs.espresso
     androidTestImplementation platform(rootProject.desLibs.composeBom)
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+    // lottie
+    api rootProject.desLibs.lottie
 }
