--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,11 @@ android {
     }
 
     buildTypes {
+        debug {
+            minifyEnabled false
+            buildConfigField "boolean", "myFlag", "true"
+        }
+
         release {
             shrinkResources true
             minifyEnabled true
@@ -58,6 +63,7 @@ android {
     buildFeatures {
         compose true
         viewBinding  true
+        buildConfig true
     }
     composeOptions {
         kotlinCompilerExtensionVersion '1.3.2'
@@ -71,8 +77,8 @@ android {
 
 dependencies {
     implementation project(path: ':lib_base')
-    implementation project(path: ':lib_home')
-    implementation project(path: ':lib_square')
+    implementation project(path: ':libHome')
+    implementation project(path: ':libSquare')
     implementation project(path: ':lib_news')
     implementation project(path: ':lib_me')
     implementation rootProject.desLibs.coreKtx
@@ -93,6 +99,4 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
-    // lottie
-    api rootProject.desLibs.lottie
 }
