--- a/config.gradle
+++ b/config.gradle
@@ -25,6 +25,8 @@ ext {
             lottieVersion       : '6.0.0',
             navVersion          : '2.5.3',
             refreshVersion      : '2.0.6',
+            gsonVersion         : '2.10.1',
+            arouterVersion      : '1.5.2',
     ]
 
     desLibs = [
@@ -44,7 +46,9 @@ ext {
             navFrgKtx           : "androidx.navigation:navigation-fragment-ktx:${versions["navVersion"]}",
             navUIKtx            : "androidx.navigation:navigation-ui-ktx:${versions["navVersion"]}",
             smartRefresh        : "io.github.scwang90:refresh-layout-kernel:${versions["refreshVersion"]}",
-            adapterHelper       : "io.github.cymchad:BaseRecyclerViewAdapterHelper:4.0.0-beta10"
-
+            adapterHelper       : "io.github.cymchad:BaseRecyclerViewAdapterHelper:4.0.0-beta10",
+            gson                : "com.google.code.gson:gson:${versions["gsonVersion"]}",
+            arouter             : "com.alibaba:arouter-api:${versions["arouterVersion"]}",
+            arouterCompiler     : "com.alibaba:arouter-compiler:${versions["arouterVersion"]}"
     ]
 }
