--- a/lib_base/build.gradle
+++ b/lib_base/build.gradle
@@ -49,11 +49,9 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    api rootProject.desLibs.lottie
-    api rootProject.desLibs.smartRefresh
     api rootProject.desLibs.lifecycleRuntimeKtx
-    api rootProject.desLibs.adapterHelper
     api rootProject.desLibs.gson
     api rootProject.desLibs.arouter
     kapt rootProject.desLibs.arouterCompiler
+    api rootProject.desLibs.eventBus
 }
