--- a/uilibrary/build.gradle
+++ b/uilibrary/build.gradle
@@ -5,7 +5,6 @@ plugins {
 
 android {
     namespace 'com.example.uilibrary'
-    resourcePrefix "ui_"
 
     compileSdk rootProject.android.compileSdk
 
@@ -16,7 +15,9 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
-
+    buildFeatures {
+        viewBinding true
+    }
 
     buildTypes {
         release {
@@ -34,7 +35,9 @@ android {
 }
 
 dependencies {
-
+    api rootProject.desLibs.lottie
+    api rootProject.desLibs.smartRefresh
+    api rootProject.desLibs.adapterHelper
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
