--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         <activity
             android:name=".MainActivity"
             android:windowSoftInputMode="adjustPan"
-            android:launchMode="singleInstance"
+            android:launchMode="singleTask"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
