--- a/libHome/src/main/AndroidManifest.xml
+++ b/libHome/src/main/AndroidManifest.xml
@@ -7,5 +7,8 @@
         <activity android:name="com.example.libHome.viewStub.ViewStubTestActivity" />
         <activity android:name="com.example.libHome.arouter.RouterTestActivity" />
         <activity android:name="com.example.libHome.arouter.RouteSearchTranslationTestActivity"/>
+        <activity android:name="com.example.libHome.arouter.InterceptorTestActivity1"/>
+        <activity android:name="com.example.libHome.arouter.InterceptorTestActivity2"/>
+        <activity android:name="com.example.libHome.arouter.InterceptorTestActivity3"/>
     </application>
 </manifest>
