--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,12 @@ plugins {
     id 'kotlin-kapt'
 }
 
+kapt {
+    arguments {
+        arg("AROUTER_MODULE_NAME", project.getName())
+    }
+}
+
 android {
 //    signingConfigs {
 //        debug {
@@ -101,4 +107,5 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+    kapt rootProject.desLibs.arouterCompiler
 }
