--- a/libNet/build.gradle
+++ b/libNet/build.gradle
@@ -1,18 +1,10 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
-}
-
-kapt {
-    arguments {
-        arg("AROUTER_MODULE_NAME", project.getName())
-    }
 }
 
 android {
-    namespace 'com.example.lib_home'
-    resourcePrefix "home_"
+    namespace 'com.example.libnet'
     compileSdk rootProject.android.compileSdk
 
     defaultConfig {
@@ -21,17 +13,25 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+
+        buildConfigField "String", "BASE_URL", "\"${active.baseUrl}\""
     }
 
     buildTypes {
+        debug {
+            minifyEnabled false
+        }
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     buildFeatures {
-        viewBinding true
+        buildConfig true
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -41,15 +41,18 @@ android {
     }
 }
 
-
 dependencies {
     implementation project(path: ':lib_base')
-    compileOnly project(path: ':libNet')
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    kapt rootProject.desLibs.arouterCompiler
+    api rootProject.desLibs.liveDataKtx
+    api rootProject.desLibs.viewModelKtx
+    api rootProject.desLibs.retrofit2
+    api rootProject.desLibs.retrofit2Gson
+    api rootProject.desLibs.retrofit2Gson
+    api rootProject.desLibs.loggingInterceptor
 }
