feat(libNet):glide

--- a/config.gradle
+++ b/config.gradle
@@ -62,6 +62,9 @@ ext {
             retrofit2Gson      : "com.squareup.retrofit2:converter-gson:${versions["retrofitGsonVersion"]}",
             loggingInterceptor : "com.squareup.okhttp3:logging-interceptor:${versions["okhttp3LogVersion"]}",
             fragmentKtx        : "androidx.fragment:fragment-ktx:${versions["fragmentVersion"]}",
+            glideCompiler      : "com.github.bumptech.glide:compiler:4.11.0",
+            glide              : "com.github.bumptech.glide:glide:4.15.1",
+
 
     ]
 
@@ -69,6 +72,9 @@ ext {
             baseUrl: "https://www.wanandroid.com",
     ]
 
+    release = [
+            baseUrl: "https://www.wanandroid.com",
+    ]
 
     active = debug
 
