--- a/lib_base/build.gradle
+++ b/lib_base/build.gradle
@@ -55,4 +55,5 @@ dependencies {
     kapt rootProject.desLibs.arouterCompiler
     api rootProject.desLibs.eventBus
     api rootProject.desLibs.fragmentKtx
+    kapt rootProject.desLibs.glideCompiler
 }
