--- a/uilibrary/build.gradle
+++ b/uilibrary/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     api 'com.blankj:utilcodex:1.31.1'
+    api rootProject.desLibs.glide
 }
