--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,20 +11,20 @@ kapt {
 }
 
 android {
-//    signingConfigs {
-//        debug {
-//            storeFile file('../XXX.jks')
-//            storePassword '123456'
-//            keyAlias 'XXX'
-//            keyPassword '123456'
-//        }
-//        release {
-//            storeFile file('../XXX.jks')
-//            storePassword '123456'
-//            keyAlias 'XXX'
-//            keyPassword '123456'
-//        }
-//    }
+    signingConfigs {
+        debug {
+            storeFile file('spk.jks')
+            storePassword '123456'
+            keyAlias 'spk'
+            keyPassword '123456'
+        }
+        release {
+            storeFile file('spk.jks')
+            storePassword '123456'
+            keyAlias 'spk'
+            keyPassword '123456'
+        }
+    }
 
     namespace 'com.example.demoapplication'
     compileSdk rootProject.android.compileSdk
@@ -45,12 +45,14 @@ android {
     buildTypes {
         debug {
             minifyEnabled false
+
         }
 
         release {
-            shrinkResources true
-            minifyEnabled true
+            shrinkResources false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     compileOptions {
