--- a/libHome/build.gradle
+++ b/libHome/build.gradle
@@ -38,8 +38,8 @@ android {
 
 dependencies {
     implementation project(path: ':lib_base')
+    implementation rootProject.desLibs.coreKtx
     compileOnly project(path: ':libNet')
-    implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     testImplementation 'junit:junit:4.13.2'
