--- a/libLogin/build.gradle
+++ b/libLogin/build.gradle
@@ -37,7 +37,7 @@ android {
 
 dependencies {
     implementation project(path: ':lib_base')
-    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation rootProject.desLibs.coreKtx
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     testImplementation 'junit:junit:4.13.2'
