--- a/uilibrary/build.gradle
+++ b/uilibrary/build.gradle
@@ -32,9 +32,9 @@ dependencies {
     api rootProject.desLibs.lottie
     api rootProject.desLibs.smartRefresh
     api rootProject.desLibs.adapterHelper
-    implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
+    implementation rootProject.desLibs.coreKtx
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
