--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,9 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'therouter'
 }
 
-kapt {
-    arguments {
-        arg("AROUTER_MODULE_NAME", project.getName())
-    }
-}
 
 android {
     signingConfigs {
@@ -103,6 +99,6 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
-    kapt rootProject.desLibs.arouterCompiler
     debugApi rootProject.desLibs.leakcanary
+    kapt rootProject.desLibs.theRouter
 }
