--- a/config.gradle
+++ b/config.gradle
@@ -24,7 +24,6 @@ ext {
             lottieVersion      : '6.0.0',
             navVersion         : '2.3.5',
             refreshVersion     : '2.0.6',
-            arouterVersion     : '1.5.2',
             eventBusVersion    : '3.3.1',
             retrofitVersion    : '2.9.0',
             retrofitGsonVersion: '2.4.0',
@@ -32,7 +31,8 @@ ext {
             fragmentVersion    : '1.5.7',
             activityVersion    : '1.7.2',
             moshiVersion       : '1.14.0',
-            room_version       : '2.5.0',
+            roomVersion        : '2.5.0',
+            theRouterVersion   : '1.2.0-beta3',
     ]
 
     desLibs = [
@@ -53,8 +53,6 @@ ext {
             navUIKtx           : "androidx.navigation:navigation-ui-ktx:${versions["navVersion"]}",
             smartRefresh       : "io.github.scwang90:refresh-layout-kernel:${versions["refreshVersion"]}",
             adapterHelper      : "io.github.cymchad:BaseRecyclerViewAdapterHelper:4.0.0-beta14",
-            arouter            : "com.alibaba:arouter-api:${versions["arouterVersion"]}",
-            arouterCompiler    : "com.alibaba:arouter-compiler:${versions["arouterVersion"]}",
             eventBus           : "org.greenrobot:eventbus:${versions["eventBusVersion"]}",
             liveDataKtx        : "androidx.lifecycle:lifecycle-livedata-ktx:${versions["lifecycleVersion"]}",
             viewModelKtx       : "androidx.lifecycle:lifecycle-viewmodel-ktx:${versions["lifecycleVersion"]}",
@@ -68,8 +66,10 @@ ext {
             moshi              : "com.squareup.moshi:moshi:${versions["moshiVersion"]}",
             moshiKotlin        : "com.squareup.moshi:moshi-kotlin:${versions["moshiVersion"]}",
             retrofitMoshi      : "com.squareup.retrofit2:converter-moshi:${versions["retrofitVersion"]}",
-            room               : "androidx.room:room-ktx:${versions["room_version"]}",
-            roomCompiler       : "androidx.room:room-compiler:${versions["room_version"]}",
+            room               : "androidx.room:room-ktx:${versions["roomVersion"]}",
+            roomCompiler       : "androidx.room:room-compiler:${versions["roomVersion"]}",
+            theRouter          : "cn.therouter:apt:${versions["theRouterVersion"]}",
+            therouter          : "cn.therouter:router:${versions["theRouterVersion"]}",
 
 
     ]
