--- a/libHome/src/main/AndroidManifest.xml
+++ b/libHome/src/main/AndroidManifest.xml
@@ -6,11 +6,11 @@
         <activity android:name="com.example.libHome.eventBus.EventBusTestActivity" />
         <activity android:name="com.example.libHome.viewStub.ViewStubTestActivity" />
         <activity android:name="com.example.libHome.viewStub.ViewStubTest2Activity" />
-        <activity android:name="com.example.libHome.arouter.RouterTestActivity" />
-        <activity android:name="com.example.libHome.arouter.RouteSearchTranslationTestActivity"/>
-        <activity android:name="com.example.libHome.arouter.InterceptorTestActivity1"/>
-        <activity android:name="com.example.libHome.arouter.InterceptorTestActivity2"/>
-        <activity android:name="com.example.libHome.arouter.InterceptorTestActivity3"/>
+        <activity android:name="com.example.libHome.therouter.RouterTestActivity" />
+        <activity android:name="com.example.libHome.therouter.RouteSearchTranslationTestActivity"/>
+        <activity android:name="com.example.libHome.therouter.InterceptorTestActivity1"/>
+        <activity android:name="com.example.libHome.therouter.InterceptorTestActivity2"/>
+        <activity android:name="com.example.libHome.therouter.InterceptorTestActivity3"/>
         <activity android:name="com.example.libHome.viewStub.ViewStubActivity"/>
         <activity android:name="com.example.libHome.room.RoomActivity"/>
         <activity android:name="com.example.libHome.intentSetting.IntentSettingActivity"/>
