--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,6 +99,7 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+    implementation "org.jetbrains.kotlin:kotlin-reflect"
     debugApi rootProject.desLibs.leakcanary
     kapt rootProject.desLibs.theRouter
 }
