--- a/config.gradle
+++ b/config.gradle
@@ -1,3 +1,6 @@
+/**
+ * 依赖及版本号管理
+ */
 ext {
 
     signingConfig = [
@@ -14,7 +17,7 @@ ext {
             versionName  : "1.0",
             compileSdk   : 33
     ]
-
+    // 版本号
     versions = [
             coreVersion        : '1.8.0',
             lifecycleVersion   : '2.3.1',
@@ -35,6 +38,7 @@ ext {
             theRouterVersion   : '1.2.0-beta3',
     ]
 
+    // 依赖集合
     desLibs = [
             coreKtx            : "androidx.core:core-ktx:${versions["coreVersion"]}",
             lifecycleRuntimeKtx: "androidx.lifecycle:lifecycle-runtime-ktx:${versions["lifecycleVersion"]}",
@@ -71,8 +75,6 @@ ext {
             theRouter          : "cn.therouter:apt:${versions["theRouterVersion"]}",
             therouter          : "cn.therouter:router:${versions["theRouterVersion"]}",
             mmkv               : "com.tencent:mmkv:1.3.0",
-
-
     ]
 
     debug = [
@@ -83,6 +85,6 @@ ext {
             baseUrl: "https://www.wanandroid.com",
     ]
 
+    // 切换运行时网络环境
     active = debug
-
 }
