feat: 组件化优化

--- a/singleModule.gradle
+++ b/singleModule.gradle
@@ -3,7 +3,7 @@
  */
 project.ext {
     //是否允许module单独调试
-    isModuleDebug = true
+    isModuleDebug = false
     moduleName = "libHome"//单独调试module名
     minSdk = 24
     targetSdk = 33
@@ -18,6 +18,8 @@ project.ext {
             if (project.ext.isModuleDebug && project.ext.moduleName == project.name) {
                 extension.apply plugin: 'com.android.application'
                 extension.description "app"
+                // 单模块模式下添加theRouter插件
+                extension.apply plugin: 'therouter'
             } else {
                 extension.apply plugin: 'com.android.library'
                 extension.description "lib"
@@ -25,9 +27,7 @@ project.ext {
             extension.apply plugin: 'kotlin-android'
             extension.apply plugin: 'kotlin-parcelize'
             extension.apply plugin: 'kotlin-kapt'
-
             appImplementation = project.name
-
             //设置通用Android配置
             setAppOrLibAndroidConfig extension.android
     }
@@ -44,7 +44,6 @@ project.ext {
                 extension.flavorDimensions "versionCode"
                 testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
             }
-
             //使用的jdk版本
             extension.compileOptions {
                 sourceCompatibility JavaVersion.VERSION_1_8
@@ -53,10 +52,8 @@ project.ext {
             extension.kotlinOptions {
                 jvmTarget = '1.8'
             }
-
             extension.buildFeatures.viewBinding = true
             extension.buildFeatures.buildConfig = true
-
             //动态改变清单文件资源指向
             extension.sourceSets {
                 main {
