--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,10 +37,11 @@
 
         </activity>
 
-        <activity android:name=".NewMainActivity"
+        <activity
+            android:name=".NewMainActivity"
             android:exported="true"
             android:launchMode="singleTask"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan" />
 
     </application>
 
