--- a/settings.gradle
+++ b/settings.gradle
@@ -5,11 +5,18 @@ pluginManagement {
         gradlePluginPortal()
     }
 }
+
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
         mavenCentral()
+        maven {
+            url 'D:\\flutter_projects\\DemoApplication\\flutter_library\\build\\host\\outputs\\repo'
+        }
+        maven {
+            url 'https://storage.googleapis.com/download.flutter.io'
+        }
     }
 }
 rootProject.name = "Demo Application"
