--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,6 @@ plugins {
     id 'therouter'
 }
 
-
 android {
     signingConfigs {
         release {
@@ -49,6 +48,9 @@ android {
             signingConfig signingConfigs.release
         }
 
+        profile {
+            initWith debug
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
@@ -112,6 +114,7 @@ dependencies {
     kapt rootProject.desLibs.theRouter
     implementation rootProject.desLibs.mmkv
     debugImplementation 'com.example.flutter_module:flutter_debug:1.0'
-    implementation 'com.example.flutter_module:flutter_profile:1.0'
-    implementation 'com.example.flutter_module:flutter_release:1.0'
+    profileImplementation 'com.example.flutter_module:flutter_profile:1.0'
+    releaseImplementation 'com.example.flutter_module:flutter_release:1.0'
+
 }
