--- a/lib_me/build.gradle
+++ b/lib_me/build.gradle
@@ -5,7 +5,6 @@ plugins {
 }
 
 
-
 android {
     namespace 'com.example.lib_me'
     resourcePrefix "me_"
@@ -20,7 +19,7 @@ android {
     }
 
     buildFeatures {
-        viewBinding  true
+        viewBinding true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -41,4 +40,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     kapt rootProject.desLibs.theRouter
+    debugCompileOnly 'com.example.flutter_module:flutter_debug:1.0'
+    releaseCompileOnly 'com.example.flutter_module:flutter_release:1.0'
 }
