--- a/flutter_module/pubspec.yaml
+++ b/flutter_module/pubspec.yaml
@@ -11,9 +11,13 @@ environment:
 # Flutter依赖库
 dependencies:
   date_format: 2.0.7
+
   flutter:
     sdk: flutter
+
   cupertino_icons: ^1.0.2
+  provider: ^6.0.2
+
 #  # 路径依赖
 #  package1:
 #    path: ../package1/
