--- a/settings.gradle
+++ b/settings.gradle
@@ -12,7 +12,7 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
         maven {
-            url 'D:/flutter_projects/DemoApplication/flutter_module/build/host/outputs/repo'
+            url '/flutter_module/build/host/outputs/repo'
         }
         maven {
             url "https://storage.flutter-io.cn/download.flutter.io"
