--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
             android:windowSoftInputMode="adjustPan" />
 
         <activity
-            android:name="io.flutter.embedding.android.FlutterActivity"
+            android:name=".MyFlutterActivity"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection|fontScale|screenLayout|density"
             android:exported="true"
             android:hardwareAccelerated="true"
